-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.3.0 Beta1
-
None
This:
#include <QtCore> #include <QtNetwork> int main(int argc, char **argv) { QCoreApplication app(argc, argv); qDebug() << QSslSocket::sslLibraryVersionString() << "(" << QSslSocket::sslLibraryVersionNumber() << ")"; return 0; }
gives me (Ubuntu 12.04.4):
QSslSocket: cannot call unresolved function SSLeay
"OpenSSL 1.0.1 14 Mar 2012" ( 0 )
For Gerrit Dashboard: QTBUG-37783 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
82812,2 | Ensure we initialize things before checking the openssl version. | stable | qt/qtbase | Status: MERGED | +2 | 0 |