Ensure we initialize things before checking the openssl version.

Task-number: QTBUG-37783
Change-Id: Ie276e597062d8bfc74ef57251ed21a94020e030f
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>

cregit: f41418aeb20ddc190892216a09feb564d2cef5b4 https://github.com/qt/qtbase/commit/f41418aeb20ddc190892216a09feb564d2cef5b4